[package]
name = "scs-relay-server"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
env_logger = "0.10.0"
futures = "0.3.28"
libp2p = { version = "0.52.1", features = ["async-std", "macros", "ping", "tcp", "identify", "yamux", "relay", "tls"] }
daemonize = "0.5.0"
quic = { version = "0.9.0-alpha", package = "libp2p-quic", features = ["tokio", "async-std"] }